--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "EditThisCookie",
+  "name": "EditThisCookie (V3)",
   "version": "3.0.2",
   "description": "__MSG_editThis_description__",
   "icons": {
